# yancc

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .test_durations  CITATION.cff  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  jax_tests.yml  pyright.yml  release.yml  ruff.yml  scheduled.yml  unittest.yml
benchmarks/: README.md  bench_dke.py  bench_mdke.py  cases_dke.py  cases_mdke.py
docs/: Makefile  api.rst  conf.py  index.rst  loading_fields.rst  performance.rst  quickstart.rst  theory.rst  tuning.rst  write_variables.py
docs/_static/: custom.css  make_logo.py
docs/_templates/autosummary/: solution_class.rst
publications/conlin2026/: benchmark_mdke.ipynb  benchmark_ncsx_er_scan_two_species.ipynb  benchmark_nhat_scan.ipynb  multigrid_cycle.ipynb  smoothing.ipynb  spectrum.ipynb
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/: 20251212-01_sfincs_yancc_benchmark_NCSX_1species_collisionality_scan.txt  20260528-01_sfincs_yancc_benchmark_NCSX_2species_Er_scan.txt
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/: input.namelist  input.namelist~  job.sfincsScan  job.sfincsScan.laptop  job.sfincsScan~
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/00/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/01/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/02/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/03/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/04/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/05/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/06/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/07/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/08/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/09/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/10/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/11/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/12/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/13/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/14/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/15/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/16/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/17/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/18/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/19/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/20/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/21/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/22/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/23/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/24/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/25/: input.namelist  job.sfincsScan
publications/conlin2026/20251212-01-sfincs_for_yancc_benchmarks/20251212-01-030_collisionality_scan/26/: input.namelist  job.sfincsScan
publications/conlin2026/Benchmark-MONKES-JAX/W7X-KJM/: boozxform_B_modes.plt
publications/conlin2026/tex/: yancc.bib  yancc.tex
tests/: __init__.py  conftest.py  test_collisions.py  test_field.py  test_finite_diff.py  test_krylov.py  test_linalg.py  test_misc.py  test_multigrid.py  test_potentials.py  test_preconditioner.py  test_smoothers.py  test_solution.py  test_solve.py  test_species.py  test_trajectories.py  test_velocity_grids.py
tests/data/: 20251212-01_sfincs_yancc_benchmark_NCSX_1species_Er_scan.txt  20260528-01-013_tokamak_radialScan_ntheta71_nxi160_nx24_tol1e-6_results.txt  20260528-01_sfincs_yancc_benchmark_NCSX_2species_Er_scan.txt  NCSX.bc  boozmn_wout_NCSX.nc  wout_DSHAPE.nc  wout_NCSX.nc
yancc/: __init__.py  _version.py  collisions.py  field.py  finite_diff.py  krylov.py  linalg.py  misc.py  multigrid.py  pinn.py  preconditioner.py  root.py  smoothers.py  solution.py  solve.py  species.py  trajectories.py  trajectories_scipy.py  utils.py  velocity_grids.py
(+8 files in other folders)
