[build-system]
requires = [ "setuptools>=40.8.0", "wheel", "versioneer-518" ]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = [ "yancc/*.py", "tests/*.py" ]
exclude = [
  "yancc/_version.py",
  "versioneer.py",
  "docs/conf.py",
  "local/*",
  "*/.ipynb_checkpoints/*"
]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["docs", "build", "local", "versioneer.py", "yancc/_version.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D", "ERA", "UP", "C901"]
ignore = [
  "E731",   # lambda expressions are useful
  "E741",   # variable names like "l" are common for mode numbers
  "D401",   # don't want to always use "imperative mood" in docstrings
  "D105",   # don't care about docstrings in __dunder__ methods
  "D205",   # rst titles in modules
  "D400",   # rst titles in modules
  "F722",   # to play nice with jaxtyping
  "W505",   # doc line length handled elsewhere
]

[tool.ruff.lint.per-file-ignores]
# need to import things to top level even if they aren't used there
"yancc/__init__.py" = ["F401"]
"tests/*" = ["D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 15
