[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[versioneer]
VCS = git
style = pep440
versionfile_source = yancc/_version.py
versionfile_build = yancc/_version.py
tag_prefix = v
parentdir_prefix = yancc-


[coverage:run]
# Settings to control coverage.py or pytest with coverage flags: "--cov" (requires pytest-cov)
# we only care about the coverage of the source itself
# otherwise it measures coverage of the tests themselves as well
source =
       yancc/

# _version.py is generated code, no need to count it
omit =
     yancc/_version.py

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:

ignore_errors = True


[tool:pytest]
markers=
	unit: marks small unit tests
	regression: marks end to end regression tests
	slow: marks tests as slow (deselect with 'pytest -m "not slow"').
	fast: mark tests as fast.
filterwarnings=
    error
    ignore::pytest.PytestUnraisableExceptionWarning
    # Ignore division by zero warnings.
    ignore:numpy.ndarray size changed:RuntimeWarning
    # ignore benign Cython warnings on ndarray size
    ignore::DeprecationWarning:ml_dtypes.*
    # ignore benign ml_dtypes DeprecationWarning


[options.data_files]
* =
  *.txt

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt
setup_requires = requirements-dev.txt
